--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -38,23 +38,7 @@
                 android:layout_marginTop="70dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/author"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:drawablePadding="10dp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:textColor="@android:color/white"
-                android:singleLine="true"
-                android:layout_marginRight="160dp"
-                android:text="Author"
-                android:gravity="bottom"
-                android:layout_alignLeft="@+id/title"
-                android:layout_alignStart="@+id/title"
-                android:layout_alignRight="@+id/layoutDate"
-                android:layout_alignTop="@+id/layoutDate"
-                android:layout_alignEnd="@+id/layoutDate"/>
+
             <FrameLayout
                 android:id="@+id/layoutDate"
                 android:layout_width="wrap_content"
@@ -70,7 +54,6 @@
                     android:textColor="#606060"
                     android:id="@+id/PublishedAt"
                     android:gravity="center"
-
                     android:drawableStart="@drawable/ic_date"
                     android:layout_marginRight="10dp"
                     android:text="01 January 1990"
@@ -82,7 +65,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
+                android:fontFamily="@font/roboto"
                 android:textStyle="bold"
                 android:textColor="@color/colorTextTitle"
                 android:layout_marginLeft="16dp"
@@ -125,6 +108,7 @@
                 android:layout_height="20dp"
                 android:layout_below="@+id/desc"
                 android:gravity="end"
+                android:fontFamily="@font/roboto"
                 android:layout_alignParentEnd="true"
                 android:layout_marginLeft="234dp"
                 android:layout_marginTop="10dp"
