--- a/app/src/main/res/menu/menu_news.xml
+++ b/app/src/main/res/menu/menu_news.xml
@@ -5,10 +5,10 @@
     <item android:id="@+id/share"
         android:title="Share"
         android:icon="@drawable/ic_share"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
     <item android:id="@+id/view_web"
         android:icon="@drawable/ic_browser"
         android:title="Open with browser"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 
 </menu>
