--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,9 @@
     <color name="colorPrimaryDark">#cf2a2d</color>
     <color name="colorAccent">#1e344b</color>
 
+    <color name="colorBlack">#000</color>
     <color name="colorBackground">#f9f9fa</color>
     <color name="colorTextSubtitle">#4e4e4e</color>
     <color name="colorTextTitle">#262626</color>
+
 </resources>
