--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -16,7 +16,7 @@
         app:cardCornerRadius="10dp">
         
         <RelativeLayout
-            android:background="?android:attr/selectableItemBackground"
+            android:background="#FFFFFF"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
